Added the camera and post segues

--- a/PhotoDrop/Info.plist
+++ b/PhotoDrop/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>&quot;Photo Drop would like to use your camera.&quot;</string>
 </dict>
 </plist>
