--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+# switchUser settings
+switchUserSettings.sh
+
