--- a/PhotoDrop/Info.plist
+++ b/PhotoDrop/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>PhotoDrop would like access to your Photo Library</string>
 </dict>
 </plist>
