Add Loading Storyboard

--- a/PhotoDrop/Info.plist
+++ b/PhotoDrop/Info.plist
@@ -30,6 +30,8 @@
 	<string>PhotoDrop would like access to your Photo Library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Loading</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
